eks-module/public-subnets.tf
resource "aws_subnet" "public" {
  count                   = length(local.az)
  vpc_id                  = aws_vpc.eks-terraform-vpc.id
  cidr_block              = cidrsubnet(var.cidr_block, 4, count.index)
  availability_zone       = local.az[count.index]
  map_public_ip_on_launch = true

  tags = {
    Name = "${var.env}-public"

    # Correct cluster tag
    "kubernetes.io/cluster/${var.env}-${var.eks}" = "shared"

    # Correct ELB role tag
    "kubernetes.io/role/elb" = "1"
  }
}
